set(CMAKE_CXX_STANDARD 17)

add_executable(std-recursive-variant
    recursive_data_composition.cpp)

add_executable(template-template-parameter
    template_template_parameter.cc)

add_executable(y-combinator
    y_combinator.cc)

add_executable(fixed-point-operator
    fixed_point_operator.cc)

add_executable(delegate-to-class
    delegate_to_class.cc)

add_executable(std-move-semantics
    move_semantics.cc)

add_executable(std-cast
    cast.cc)

add_executable(std-class-tutorial
    class_tutorial.cc)

add_executable(std-shared-ptr
    shared_ptr.cc)

add_executable(std-unique-ptr
    unique_ptr.cc)