set(CMAKE_CXX_STANDARD 17)

add_executable(std-recursive-variant
    recursive_data_composition.cpp)

add_executable(template-template-parameter
    template_template_parameter.cc)

add_executable(y-combinator
    y_combinator.cc)

add_executable(fixed-point-operator
    fixed_point_operator.cc)

add_executable(delegate-to-class
    delegate_to_class.cc)

add_executable(std-move-semantics
    move_semantics.cc)

add_executable(std-cast
    cast.cc)

add_executable(std-class-tutorial
    class_tutorial.cc)

add_executable(std-shared-ptr
    shared_ptr.cc)

add_executable(std-unique-ptr
    unique_ptr.cc)

add_executable(std-string-input
    string_input.cc)

add_executable(std-variadic-template
    variadic_template.cc)

add_executable(std-struct-as-type-template
    struct_as_type_template.cc)

add_executable(std-overloaded-lambda
    overloaded_lambda.cc)

add_executable(std-thread-basic
    thread_basic.cc)

add_executable(std-thread-mutex
    thread_mutex.cc)

add_executable(std-thread-conditional-variable
    thread_conditional_variable.cc)

add_executable(std-thread-future-promise
    thread_future_promise.cc)

add_executable(std-thread-mutex-lock-guard
    thread_mutex_lock_guard.cc)

add_executable(std-thread-shared-lock
    thread_shared_lock.cc)

add_executable(std-chrono-timer
    chrono_timer.cc)

add_executable(std-timespec_get
    timespec_get.cc)