set(CMAKE_CXX_STANDARD 20)

add_executable(std-min-max-value-by-type
    min_max_value_by_type.cc)

add_executable(std-recursive-variant
    recursive_data_composition.cpp)

add_executable(y-combinator
    y_combinator.cc)

add_executable(fixed-point-operator
    fixed_point_operator.cc)

add_executable(delegate-to-class
    delegate_to_class.cc)

add_executable(std-move-semantics
    move_semantics.cc)

add_executable(std-cast
    cast.cc)

add_executable(std-class-tutorial
    class_tutorial.cc)

add_executable(std-shared-ptr
    shared_ptr.cc)

add_executable(std-unique-ptr
    unique_ptr.cc)

add_executable(std-string-input
    string_input.cc)

add_executable(std-random-basic
    random.cc)

add_executable(std-struct-as-type-template
    struct_as_type_template.cc)

add_executable(std-overloaded-lambda
    overloaded_lambda.cc)

add_executable(std-chrono-timer
    chrono_timer.cc)

add_executable(std-timespec_get
    timespec_get.cc)

add_executable(std-forward-list
    forward-list.cc)

add_executable(std-operator-cast
    operator_cast.cc)

add_executable(std-priority-queue
    priority_queue.cc)

add_executable(std-multibyte-char-split
    mutibyte_char_split.cc)