set(CMAKE_CXX_STANDARD 20)

add_executable(template-basic
    basic.cc)

add_executable(template-template-parameter
    template_template_parameter.cc)

add_executable(template-variadic-template
    variadic_template.cc)

add_executable(template-deducation-guide
    template_deducation_guide.cc)

add_executable(template-concept
    concept.cc)